# minecraft_server_manager

./: Cargo.toml  install.sh  shell.nix  uninstall.sh
src/: app.rs  config.rs  i18n.rs  main.rs  mod_manager.rs  server_manager.rs  tailscale.rs  whitelist.rs
