[package]
name = "mc_server_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9.7"
md5 = "0.7.0"
zip = "1.1.3"
egui_extras = { version = "0.27.2", features = ["http", "image"] }
image = { version = "0.24", features = ["png", "jpeg"] }
rfd = "0.14"
